[gd_scene load_steps=17 format=3 uid="uid://f66wgdwt15r1"]

[ext_resource type="Environment" uid="uid://jvmpkdwaeaq" path="res://scenes/main-environment.tres" id="1_ufr0v"]
[ext_resource type="PackedScene" uid="uid://dl2ed4gkybggf" path="res://objects/player.tscn" id="2_m6sr8"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="3_apmtk"]
[ext_resource type="FontFile" uid="uid://biqtga8moh7ah" path="res://fonts/lilita_one_regular.ttf" id="4_vpilp"]
[ext_resource type="PackedScene" uid="uid://d2g78tpqbyf5g" path="res://objects/enemy.tscn" id="5_se2tp"]
[ext_resource type="PackedScene" uid="uid://r7rt7pth4u7o" path="res://objects/wall_low.tscn" id="6_2bbke"]
[ext_resource type="PackedScene" uid="uid://dpm3l05d7fu35" path="res://objects/platform.tscn" id="7_ohy75"]
[ext_resource type="PackedScene" uid="uid://c71evdjblk5wp" path="res://objects/wall_high.tscn" id="8_rx2lk"]
[ext_resource type="PackedScene" uid="uid://bvx5cvigosg0s" path="res://objects/platform_large_grass.tscn" id="9_sutb4"]
[ext_resource type="PackedScene" uid="uid://kiyswduaacf1" path="res://objects/wine_glass.tscn" id="10_i3iq1"]
[ext_resource type="PackedScene" uid="uid://c0s75mumsh7i" path="res://objects/apple.tscn" id="11_j8vy1"]
[ext_resource type="PackedScene" uid="uid://bbf8k6lf4kwmp" path="res://objects/pistol.tscn" id="12_mhctk"]
[ext_resource type="PackedScene" uid="uid://b4brarg7c68r" path="res://objects/broccoli.tscn" id="13_d88hq"]
[ext_resource type="PackedScene" uid="uid://chwv82a15kfdt" path="res://objects/chair.tscn" id="14_lt7b8"]
[ext_resource type="PackedScene" uid="uid://cyoqpinx3d1rh" path="res://objects/gun_man.tscn" id="15_dy8rg"]

[sub_resource type="LabelSettings" id="LabelSettings_fpmwk"]
font = ExtResource("4_vpilp")
font_size = 36
outline_size = 12
outline_color = Color(0, 0, 0, 0.470588)

[node name="OldMain" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_ufr0v")

[node name="Player2" parent="." instance=ExtResource("2_m6sr8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.09469, -4.32827, -0.183316)
collision_mask = 9

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.422618, -0.694272, 0.582563, 0, 0.642788, 0.766044, -0.906308, 0.323744, -0.271654, 0, 0, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_apmtk")

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(64, 64)

[node name="Health" type="Label" parent="HUD"]
offset_left = 48.0
offset_top = 627.0
offset_right = 138.0
offset_bottom = 672.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "100%"
label_settings = SubResource("LabelSettings_fpmwk")
vertical_alignment = 2

[node name="Ammo" type="Label" parent="HUD"]
offset_left = 49.0
offset_top = 559.0
offset_right = 139.0
offset_bottom = 604.0
size_flags_horizontal = 0
size_flags_vertical = 8
label_settings = SubResource("LabelSettings_fpmwk")
vertical_alignment = 2

[node name="Enemies" type="Node" parent="."]

[node name="enemy-flying" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("5_se2tp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 2.5, -6)
player = NodePath("../../Player2")

[node name="enemy-flying2" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("5_se2tp")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -9.5, 2.5, 1.5)
player = NodePath("../../Player2")

[node name="enemy-flying3" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("5_se2tp")]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 5.5, 3.5, 9)
player = NodePath("../../Player2")

[node name="enemy-flying4" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("5_se2tp")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 15.5, 4, -7.5)
player = NodePath("../../Player2")

[node name="Level" type="Node" parent="."]

[node name="wall-low" parent="Level" instance=ExtResource("6_2bbke")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, -1.92088, 1.05, -6.90166)

[node name="wall-low3" parent="Level" instance=ExtResource("6_2bbke")]
transform = Transform3D(-1, 0, -1.19209e-07, 0, 1, 0, 1.19209e-07, 0, -1, 6.07912, 1.05, 6.59834)

[node name="platform" parent="Level" instance=ExtResource("7_ohy75")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 6.5)

[node name="platform2" parent="Level" instance=ExtResource("7_ohy75")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.5, 2.5, -2.5)

[node name="platform3" parent="Level" instance=ExtResource("7_ohy75")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 3, -3.5)

[node name="platform4" parent="Level" instance=ExtResource("7_ohy75")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 7, 1, -2)

[node name="wall-high" parent="Level" instance=ExtResource("8_rx2lk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, 1.5, 4)

[node name="wall-high2" parent="Level" instance=ExtResource("8_rx2lk")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 11.5, 3, -5.5)

[node name="platform-large-grass" parent="Level" instance=ExtResource("9_sutb4")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -0.0172455, -10.0202, -0.000716209)

[node name="platform-large-grass2" parent="Level" instance=ExtResource("9_sutb4")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, -2, 0.5, -6)

[node name="platform-large-grass3" parent="Level" instance=ExtResource("9_sutb4")]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, -6, 1, 2.5)

[node name="platform-large-grass5" parent="Level" instance=ExtResource("9_sutb4")]
transform = Transform3D(0.866026, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866026, 12, 2.5, -5)

[node name="platform-large-grass4" parent="Level" instance=ExtResource("9_sutb4")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 5, 0.5, 5.5)

[node name="Decoration" type="Node" parent="."]

[node name="wine_glass" parent="." instance=ExtResource("10_i3iq1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0609431, 1.3367, 0.702724)
collision_layer = 2

[node name="apple" parent="." instance=ExtResource("11_j8vy1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.443587, 0.585802, 0.956913)

[node name="pistol" parent="." instance=ExtResource("12_mhctk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.19209e-07, 3.81316, 1.22624)

[node name="broccoli" parent="." instance=ExtResource("13_d88hq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.16028, -1.40335)
collision_mask = 11

[node name="chair" parent="." instance=ExtResource("14_lt7b8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0989902, 0.496962, 0)

[node name="GunMan" parent="." node_paths=PackedStringArray("player") instance=ExtResource("15_dy8rg")]
transform = Transform3D(-0.995703, -0.0696264, -0.0610486, -0.0697565, 0.997564, 0, 0.0608999, 0.00425853, -0.998135, -7.71371, -6.15334, -6.57299)
player = NodePath("../Player2")

[connection signal="ammo_updated" from="Player2" to="HUD" method="_on_ammo_updated"]
[connection signal="health_updated" from="Player2" to="HUD" method="_on_health_updated"]
[connection signal="weapon_dropped" from="Player2" to="HUD" method="_on_weapon_dropped"]
[connection signal="weapon_picked_up" from="Player2" to="HUD" method="_on_weapon_picked_up"]
